# kernel-foundry

./: .gitignore  AGENTS.md  design.md  k-search.html  kernelfoundry.html  main.py  main_world_model.py  pyproject.toml
kernel_foundry/: config.py  types.py
kernel_foundry/archive/: island_archive.py  map_elites.py  prompt_archive.py
kernel_foundry/classifier/: triton_classifier.py
kernel_foundry/evaluation/: benchmarker.py  compiler.py  correctness.py  fitness.py  isolation.py  profiler.py  service.py  template_optimizer.py
kernel_foundry/evolution/: loop.py  selector.py
kernel_foundry/gradient/: estimator.py
kernel_foundry/llm/: client.py  response_parser.py
kernel_foundry/prompt/: constructor.py  evolvable_sections.py  meta_prompter.py
kernel_foundry/search/: __init__.py  instantiator.py  types.py  world_model.py  world_model_loop.py
kernel_foundry/task/: spec.py
tasks/: causal_conv1d.py  fused_recurrent_gated_delta_rule.py  matmul.py  softmax.py  solve_tril.py
tests/: conftest.py  test_archive.py  test_classifier.py  test_evolution_loop.py  test_fitness.py  test_gradient.py  test_prompt_constructor.py  test_response_parser.py  test_selector.py  test_template_optimizer.py  test_world_model.py  test_world_model_cli.py
