[project]
name = "kernel-foundry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "python-dotenv>=1.0",
    "torch>=2.9",
    "triton>=3.0",
    "numpy>=2.2",
    "pyyaml>=6.0",
]

[project.scripts]
kernel-foundry = "main:cli"
kernel-foundry-world-model = "main_world_model:cli"
